--- a/pt/css/global-custom.css
+++ b/pt/css/global-custom.css
@@ -69,7 +69,7 @@ h1,h2,h3,h4,h5,h6 {
 
 	padding:0;
 }
-
+/*
 #maincolumn ul {
 	margin-left: 20px;
 	padding-left: 0;
@@ -80,7 +80,7 @@ h1,h2,h3,h4,h5,h6 {
 	padding-left: 18px;
 	background: url(../images/list.png) no-repeat 0% .5em;
 }
-
+*/
 a, a:link, a:visited {
 	font-weight: bold;
 	color: #206fbc;
@@ -258,6 +258,56 @@ td {
 
 .composition, .mnemokw {
 	font-weight: bold;
+}
+
+.navsubmenu {
+	padding: 0;
+	width: 100%;
+	background: transparent;
+}
+
+.navsubmenu ul {
+	font: bold 13px arial;
+	margin: 0;
+	margin-left: 20px;
+	padding: 0;
+	list-style: none;
+}
+
+.navsubmenu li {
+	display: inline;
+	margin: 0 2px 0 0;
+	padding: 0;
+}
+
+.navsubmenu a, .navsubmenu a:link, .navsubmenu a:visited {
+	float: left;
+	display: block;
+	color: #fff ! important;
+	margin: 0 1px 0 0;
+	padding: 5px 10px;
+	text-decoration: none;
+	letter-spacing: 1px;
+	background: #333 url(../images/button.png) repeat-x;
+	border-bottom: 1px solid #fff;
+}
+
+.navsubmenu a:hover{
+	background: #999;
+}
+
+.navsubmenu .current a {
+	background: #5190b2 url(../images/button_current.png) repeat-x; 
+	border-color: #5190b2;
+}
+
+.modeDesc {
+	padding-top: 10px;
+	font-style: italic;
+} 
+
+#audioURL {
+	width: 99%; 
 }
 
 /***** GLOBAL CLASSES *****/
