--- a/pt/css/global-custom.css
+++ b/pt/css/global-custom.css
@@ -210,7 +210,17 @@ legend {
 	/* padding-top: 20px;*/
 	/*height: 72px;*/
 }
-
+.charsection {
+/*	background-color: #5190b2;
+	border: 5px solid #7cabc6;*/
+	background-color: #7cabc6;
+	border: 5px solid #5190b2;
+	padding: 5px 10px 5px 10px;
+	/* margin: 15px 40px 15px 20px;*/
+	margin: 0px 10px 0px 0px;
+	text-align: center;
+  }
+  
 .login {
 	background: #5190b2 url(../images/button_current.png) repeat-x;
 	/* background-color: #5190b2;*/
@@ -323,12 +333,35 @@ div.charview td{
 	padding: 0px;    
   }
 div.charview .charbox { /* Used in char listing for single views */
-	color: black;
+	color: black !important;
+	text-decoration: none;
+	font-weight: normal;
 	font-size: 72px;
 	line-height: 72px;
 } 
 div.charview .components { /* Used in char listing for single views */
 	/*position: absolute; top: 10px; right: 40px;*/
+	/* background-color: #7cabc6;*/
+	/* background-color: #7cabc6; */
+	color:black;
+	background-color: #ccc;
+    padding: 5px 10px 5px 10px;
+	margin: 15px 40px 15px 20px;
+	/* 
+	border-left: 5px solid #ccc;
+	border-right: 5px solid #ccc;
+	*/
+	font-style: normal;
+	/* letter-spacing: 1px; */
+	
+}
+div.charview .notes2 { /* Used in char listing for single views */
+	background-color: #ccc;
+	margin: 0px 40px 0px 20px;	
+}
+div.charview .notes { /* Used in char listing for single views */
+	background-color: #f4f4f4;
+	margin: 0px 40px 0px 20px;	
 }
 div.charview .keyword { /* Used in char listing for single views */
 }
