lookupsystem is link

--- a/pt/css/global-custom.css
+++ b/pt/css/global-custom.css
@@ -221,6 +221,11 @@ legend {
 	text-align: center;
   }
   
+.lookupSystem {
+    text-decoration: none !important;
+    color:black !important;
+  }
+  
 .login {
 	background: #5190b2 url(../images/button_current.png) repeat-x;
 	/* background-color: #5190b2;*/
