--- a/pt/css/global-custom.css
+++ b/pt/css/global-custom.css
@@ -24,6 +24,17 @@ body {
 	margin-bottom: 4px; 
 }
 
+#headline1 .title a { // CUSTOM EDIT 
+	font: normal 35px/35px georgia, "times new roman", times, serif; 
+	border-bottom: 1px solid #999; 
+	color: #cc0000; 
+	padding-left: 20px; 
+	margin-bottom: 4px;
+	text-decoration: none; 
+	font-weight: normal;
+}
+
+
 * html #headline1 .title { 
 	margin-bottom: 0; 
 }
@@ -104,6 +115,10 @@ a:hover {
 #maincolumn a:hover {
 	/* color: #cc6600;*/
 	color: #20FFbc;
+}
+
+a.profilelink {
+	color: white !important;
 }
 
 a img,:link img,:visited img {
