--- a/pt/css/navigation-custom.css
+++ b/pt/css/navigation-custom.css
@@ -210,3 +210,35 @@
 h3.quote {
 	text-align: center;
 }
+
+.figure {
+  display: inline-block;
+  width: 30%;
+  border: thin silver solid;
+  margin: 0.5em;
+  padding: 0.5em;
+  
+  width: 225px;
+  min-width: 225px;
+  min-height: 225px;
+}
+
+.figblock {
+	text-align: center;
+}
+
+@media screen and (min-width: 300px) and (max-width: 820px) {
+	.figure {
+	    display: block;
+	    margin: 0.5em auto;
+	}
+}
+
+
+.figure p {
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+}
+
