--- a/pt/protected/extensions/colorpicker/jquery/css/colorpicker.css
+++ b/pt/protected/extensions/colorpicker/jquery/css/colorpicker.css
@@ -1,3 +1,29 @@
+
+.colorSelector { /* custom added */
+    background: rgba(0, 0, 0, 0) url("../images/select.png") repeat scroll 0 0;
+    height: 36px;
+    position: relative;
+    width: 36px;
+    display:inline-block;
+}
+
+.colorSelector div {
+	position: absolute;
+	top: 3px;
+	left: 3px;
+	width: 30px;
+	height: 30px;
+	background: url(../images/select.png) center;
+}
+
+input.colorSelectorInput {
+	position: relative;
+	top: -13px;
+	/* top: 33px;
+	left: 33px;*/
+}
+
+
 .colorpicker {
 	width: 356px;
 	height: 176px;
